--- a/MNIST_Handwritten_Digits-STARTER.ipynb
+++ b/MNIST_Handwritten_Digits-STARTER.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -404,7 +404,23 @@
       "Epoch 1 training accuracy: 0.80% training loss: 0.01112\n",
       "Epoch 1: validation accuracy 0.87%, validation loss 0.00786\n",
       "Epoch 2 training accuracy: 0.87% training loss: 0.00772\n",
-      "Epoch 2: validation accuracy 0.87%, validation loss 0.00782\n"
+      "Epoch 2: validation accuracy 0.87%, validation loss 0.00782\n",
+      "Epoch 3 training accuracy: 0.87% training loss: 0.00768\n",
+      "Epoch 3: validation accuracy 0.87%, validation loss 0.00779\n",
+      "Epoch 4 training accuracy: 0.87% training loss: 0.00765\n",
+      "Epoch 4: validation accuracy 0.87%, validation loss 0.00776\n",
+      "Epoch 5 training accuracy: 0.87% training loss: 0.00762\n",
+      "Epoch 5: validation accuracy 0.87%, validation loss 0.00773\n",
+      "Epoch 6 training accuracy: 0.87% training loss: 0.00759\n",
+      "Epoch 6: validation accuracy 0.87%, validation loss 0.00769\n",
+      "Epoch 7 training accuracy: 0.87% training loss: 0.00756\n",
+      "Epoch 7: validation accuracy 0.87%, validation loss 0.00766\n",
+      "Epoch 8 training accuracy: 0.87% training loss: 0.00753\n",
+      "Epoch 8: validation accuracy 0.87%, validation loss 0.00764\n",
+      "Epoch 9 training accuracy: 0.87% training loss: 0.00750\n",
+      "Epoch 9: validation accuracy 0.87%, validation loss 0.00762\n",
+      "Epoch 10 training accuracy: 0.87% training loss: 0.00748\n",
+      "Epoch 10: validation accuracy 0.87%, validation loss 0.00758\n"
      ]
     }
    ],
